# tunetx

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: concepts.md  conf.py  glossary.md  index.md  installation.md  quickstart.md
docs/examples/: index.md
docs/reference/: classes.md  data.md  index.md  io.md  networks.md  utils.md
docs/tutorials/: building-graphs.md  notes-and-note-groups.md  reading-a-score.md  turning-numbers-into-sound.md  working-with-rhythms.md
scripts/: benchmark_performance.py
tests/: test_core.py  test_io_and_data.py  test_networks.py
tunetx/: __init__.py
tunetx/classes/: __init__.py  _algorithms.py  pitch.py  rhythm.py
tunetx/data/: __init__.py  mapping.py  sonification.py
tunetx/io/: __init__.py  core.py  models.py
tunetx/networks/: __init__.py  descriptors.py  graphs.py  score.py
tunetx/utils/: __init__.py  collections.py  distances.py  parsing.py
